--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+*,*::after,*::before{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
 .container{
     max-width: 1140px;
     margin-left: auto;
@@ -16,15 +24,61 @@
 .cinema-list__item{
     border-radius: 10px;
     background-color: green;
-    padding: 5px;
+    padding: 7px;
     margin-top: 10px;
+    cursor: pointer;
 }
 .cinema-list__item-img{
-    width: 200px;
-    height: 300px;
+  
     border: 2px solid blueviolet;
+    display: block;
+    border-radius:inherit
 
 }
 .cinema-list__item-img,.cinema-list__item-heading{
     width: 200px;
+}
+@media only screen and (max-width:750px){
+    .container{
+        max-width: 600px;
+    }
+    
+    .cinema-list__item-img,.cinema-list__item-heading{
+        width: 180px;
+        height: auto;
+    }
+    .cinema-list__item-heading{
+    font-size: 22px;
+
+    }
+}
+@media only screen and (max-width:700px){
+    .container{
+        max-width: 500px;
+    }
+    
+    .cinema-list__item-img,.cinema-list__item-heading{
+        width: 180px;
+        height: auto;
+    }
+    .cinema-list__item-heading{
+    font-size: 22px;
+
+    }
+}
+@media only screen and (max-width:500px){
+    .container{
+        max-width: 300px;
+    }
+    .cinema-list{
+        justify-content: center;
+    }
+    .cinema-list__item-img,.cinema-list__item-heading{
+        width: 200px;
+        height: auto;
+    }
+    .cinema-list__item-heading{
+    font-size: 22px;
+
+    }
 }
